<resources>
    <string name="View_edit_customer">View Edit Customer</string>
    <string name="View_edit_designation">View/Edit Designation</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_designation">Add Designation</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="add_income">Add Income</string>
    <string name="add_income_category">Add Income Category</string>
    <string name="add_order">Add Order</string>
    <string name="add_staff">Add Staff</string>
    <string name="app_name">Darzi</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calender">Calender</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="create_account">Create Account</string>
    <string name="customers">Customers</string>
    <string name="dashboard">Dashboard</string>
    <string name="enter_email">E-mail</string>
    <string name="enter_full_name">Fullname</string>
    <string name="enter_password">Password</string>
    <string name="enter_phone">Phone No</string>
    <string name="enter_username">Username</string>
    <string name="enter_address">Address</string>
    <string name="enter_salary">Salary</string>
    <string name="enter_amount">Amount</string>
    <string name="select_designation">Select Staff Designation</string>
    <string name="enter_designation">Enter Staff Designation</string>
    <string name="enter_description">Description</string>
    <string name="enter_date">Date</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_all">Expand all</string>
    <string name="expense">Expenses</string>
    <string name="expense_management">Expense Management</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="first_slide_desc">Darzi is a Free mobile app free Tailoring Shops and Boutiques to manage Orders,Customers,Measurements,Galleries,Payments and much more.</string>
    <string name="first_slide_title">Welcome to Darzi</string>
    <string name="forget_password">Forget Password</string>
    <string name="fourth_slide_desc" />
    <string name="fourth_slide_title" />
    <string name="general_settings">General Settings</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home">Home</string>
    <string name="how_we_work">How we work?</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="income">Income</string>
    <string name="income_management">Income Management</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="login">Log In</string>
    <string name="logo_name">DARZI</string>
    <string name="logo_name_2">STITCH WITH LOVE</string>
    <string name="logout">Log Out</string>
    <string name="management">Management</string>
    <string name="measurement_settings">Measurement Settings</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="nav_expense_management">EXPENSE MANAGEMENT</string>
    <string name="nav_general_settings">GENERAL SETTINGS</string>
    <string name="nav_income_management">INCOME MANAGEMENT</string>
    <string name="nav_management_settings">MANAGEMENT SETTINGS</string>
    <string name="nav_staff_management">STAFF MANAGEMENT</string>
    <string name="next_btn">Next</string>
    <string name="no_result_found">Results not found</string>
    <string name="orders">Orders</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay_salary">Pay Salary</string>
    <string name="powered_by">Powered by ........</string>
    <string name="profile">Profile</string>
    <string name="remember_me">Remember Me</string>
    <string name="retailer_heading">Grow Your Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online services</string>
    <string name="search_hint">Search…</string>
    <string name="search_menu_title">Search</string>
    <string name="search_text">Search…</string>
    <string name="second_slide_desc">Darzi App is designed to help organise your jobs electronically thus to optimise performance.</string>
    <string name="second_slide_title">Making your life easier</string>
    <string name="select_country">Select a county</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_staff">Select Staff</string>
    <string name="select_category">Select Category</string>
    <string name="expense_name">Expense Name</string>
    <string name="date_received">Date Received</string>
    <string name="amount">Amount</string>
    <string name="paid">Paid</string>
    <string name="date_to_collect">Date to Collect</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_btn">Skip</string>
    <string name="slogan_name">Providing your management in your hands</string>
    <string name="slogan_name2">Dont bother its portable</string>
    <string name="staff_management">Staff Management</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="third_slide_desc">By going digital,you are more connected to your customers brings you more business</string>
    <string name="third_slide_title">Making your customer happy</string>
    <string name="view_edit_order">View Edit Order</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="suit">Suit</string>
    <string name="Kurta_paijama">Kurta Paijama</string>
    <string name="pathani">Pathani</string>
    <string name="formals">Formals</string>
    <string name="casuals">Casuals</string>
    <string name="add__btn">Add</string>
    <string name="back_button">Back button</string>
    <string name="tailor_clip_art">Tailor Clip Art</string>
</resources>