<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite"
    tools:context=".User.PaySalary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/pay_salary_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/general_back_icon"
                android:contentDescription="@string/back_button" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/brandongrotesqueblack"
                android:padding="30dp"
                android:text="@string/pay_salary"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:padding="10dp"
                android:src="@drawable/pay_salary_image"
                android:contentDescription="@string/tailor_clip_art" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">



                <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_staff_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_staff"
                    android:textColor="@color/black"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="2sp"
                    app:icon="@drawable/field_designation_icon"
                    app:iconTint="#000000"
                    app:rippleColor="#33AAAAAA"
                    android:fontFamily="@font/muli_semibold"
                    android:onClick="onClick"
                    android:padding="15sp"/>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pay_salary_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/field_fullname_icon"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_semibold"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pay_salary_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_date"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/field_date_icon"
                    app:startIconTint="@color/black">



                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_semibold"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pay_salary_amount"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/field_salary_icon"
                    app:startIconTint="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_semibold"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:elevation="5dp"
                android:fontFamily="@font/muli"
                android:onClick="sendSalary"
                android:text="@string/add__btn"
                android:textColor="@color/white"
                android:transitionName="transition_login_btn"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>